Fixed mis-aligned pages and added space between times and status

--- a/static/css/buses.css
+++ b/static/css/buses.css
@@ -140,6 +140,7 @@ body {
 .stop_status {
     text-align: center;
     font-size: 0.75em;
+    margin-top: 1em;
 }
 .stop_status a {
     color: #ccc;
